light edits, next time figure out session with class

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,21 +1,4 @@
-A study has subjects.
-Subjects have sessions
-sessions have MRI data {anat,func,fmap,dwi}
-MRI data folders have data.
-
-
-Part 1: Create File structure
-- This will create a study with subjects with sub-folders
-
-So, input would be:
-			- The study directory name
-			- Subject ID OR List of subjects
-			- number of sessions
-				- if single subject ID provided, then create it
-				- if list of subjects, then create it
-- checks:
-	- directory exists
-	- does that subject already exist?
-
+- Figure out what to pass into the Participant class. Just the addsession that has the 
+  full session with it's label, OR just a number, that indicates how many session  folders to create
 
 
